# CAN_Tester

./: .gitignore  CANTester.qmlproject  CANTester.qmlproject.qtds  CMakeLists.txt  qmlmodules  qtquickcontrols2.conf
content/: App.qml  AreaMonitoring.qml  AreaSenderWidgets.qml  CMakeLists.txt  CanWindow.qml  Logger.qml  MyButton.qml  MyTextInput.qml  Screen01.ui.qml  SenderWidget.qml
content/template/: Button32.qml  ButtonSwitch.qml  MyTextInput.qml
imports/: CMakeLists.txt
imports/CANTester/: CMakeLists.txt  Constants.qml  qmldir
imports/CANTester/designer/: plugin.metainfo
src/: domain.h  import_qml_plugins.h  main.cpp
src/CAN/: Data.cpp  Data.h  DataModel.cpp  DataModel.h  Tester.cpp  Tester.h  conversion.h  interfaces.h
src/CAN/linux/: Core.cpp  Core.h  Listner.cpp  Listner.h
src/CAN/linux/scripts/: addVCAN.sh  downCAN.sh  findCAN.sh  setBitrateCAN.sh  upCAN.sh
